[manager]: повторная загрузка файла создает новую джобу, если текущие уже завершены
